frontend/virtual/Include/libadalang.h

/* This type represents the analysis of a single file.

   This type has strong-reference semantics and is ref-counted. Furthermore, a
   reference to a unit contains an implicit reference to the context that owns
   it. This means that keeping a reference to a unit will keep the context and
   all the unit it contains allocated.

   This structure is partially opaque: some fields are exposed to allow direct
   access, for performance concerns.  */
typedef struct
{
   uint64_t version_number;
} *ada_analysis_unit;
/* Data type for all nodes. Nodes are assembled to make up a tree.  See the
   node primitives below to inspect such trees.

   Unlike for contexts and units, this type has weak-reference semantics:
   keeping a reference to a node has no effect on the decision to keep the unit
   that it owns allocated. This means that once all references to the context
   and units related to a node are dropped, the context and its units are
   deallocated and the node becomes a stale reference: most operations on it
   will raise a ``Stale_Reference_Error``.

   Note that since reparsing an analysis unit deallocates all the nodes it
   contains, this operation makes all reference to these nodes stale as
   well.   */
typedef void* ada_base_node;
typedef uint8_t ada_bool;
typedef struct ada_ada_node_array *ada_ada_node_array;
        

typedef struct ada_analysis_unit_array *ada_analysis_unit_array;
        



typedef struct {
        ada_internal_metadata md;
        ada_env_rebindings_type rebindings;
        ada_bool from_rebound;
} ada_internal_entity_info;
        



typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
struct ada_ada_node_array {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
        




struct ada_analysis_unit_array {
   int n;
   int ref_count;
   ada_analysis_unit items[1];
};
        



/* If this type is an access type, or a type with an Implicit_Dereference
   aspect, return the type of a dereference of an instance of this type.  */
extern int ada_base_type_decl_p_accessed_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);
        



/* Whether type is tagged or not  */
extern int ada_base_type_decl_p_is_tagged_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Return the base type entity for this derived type declaration  */
extern int ada_base_type_decl_p_base_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);
        



/* Return the list of base types for Self.  */
extern int ada_base_type_decl_p_base_types(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_ada_node_array *value_p
);
        



/* Return the list of all types that inherit (directly or inderictly) from Self
   among the given units.  */
extern int ada_base_type_decl_p_find_all_derived_types(
    ada_base_entity *node,

        
        ada_analysis_unit_array
        units,
        
        ada_bool
        imprecise_fallback,

    ada_ada_node_array *value_p
);
        



/* Return the component type of `Self`, if applicable. The component type is
   the type you'll get if you call a value whose type is `Self`.  So it can
   either be:

   1. The component type for an array. 2. The return type for an access to
   function.  */
extern int ada_base_type_decl_p_comp_type(
    ada_base_entity *node,

        
        ada_bool
        is_subscript,
        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);
        



/* Return the index type for dimension ``dim`` for this type, if
   applicable.   */
extern int ada_base_type_decl_p_index_type(
    ada_base_entity *node,

        
        int
        dim,
        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);
        



/* Whether Self is derived from other_type.  */
extern int ada_base_type_decl_p_is_derived_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        other_type,
        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Return True iff this type declaration is an interface definition.  */
extern int ada_base_type_decl_p_is_interface_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Return whether ``self`` matches ``expected_type``.  */
extern int ada_base_type_decl_p_matching_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        expected_type,
        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Return the canonical type declaration for this type declaration. For
   subtypes, it will return the base type declaration.  */
extern int ada_base_type_decl_p_canonical_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);
        



/* Returns the previous part for this type decl.  */
extern int ada_base_type_decl_p_previous_part(
    ada_base_entity *node,

        
        ada_bool
        go_to_incomplete,

    ada_base_entity *value_p
);
        



/* Returns the next part for this type decl.  */
extern int ada_base_type_decl_p_next_part(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the full completion of this type.  */
extern int ada_base_type_decl_p_full_view(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Returns whether this is a definite subtype.

   For convenience, this will return ``False`` for incomplete types, even
   though the correct answer is more akin to "non applicable".  */
extern int ada_base_type_decl_p_is_definite_subtype(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Whether node is a private view of corresponding type.  */
extern int ada_base_type_decl_p_is_private(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/* Return the type that is at the root of the derivation hierarchy (ignoring
   secondary interfaces derivations for tagged types)  */
extern int ada_base_type_decl_p_root_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);
        




extern int ada_subtype_decl_f_subtype(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_incomplete_type_decl_f_discriminants(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_incomplete_tagged_type_decl_f_has_abstract(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_protected_type_decl_f_discriminants(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field contains a list that itself contains one of the following nodes:

   * ada_char_literal

   * ada_dotted_name

   * ada_identifier

   * ada_string_literal  */
extern int ada_protected_type_decl_f_interfaces(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_protected_type_decl_f_definition(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_task_type_decl_f_discriminants(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_task_type_decl_f_definition(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_type_decl_f_discriminants(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_type_decl_f_type_def(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the list of all primitive operations that are available on this type.
   If `only_inherited` is True, it will only return the primitives that are
   implicitly inherited by this type, discarding those explicitly defined on
   this type.  */
extern int ada_type_decl_p_get_primitives(
    ada_base_entity *node,

        
        ada_bool
        only_inherited,

    ada_ada_node_array *value_p
);
        



/* Return the specification for this subprogram  */
extern int ada_basic_subp_decl_p_subp_decl_spec(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the BaseSubpBody corresponding to this node.  */
extern int ada_basic_subp_decl_p_body_part(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_classic_subp_decl_f_overriding(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_classic_subp_decl_f_subp_spec(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_attribute_ref

   * ada_box_expr

   * ada_call_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_null_literal

   * ada_qual_expr

   * ada_string_literal

   * ada_target_name  */
extern int ada_formal_subp_decl_f_default_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);