frontend/virtual/Include/libadalang/libadalang-implementation-c.ads


      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_accessed_type";
      --  If this type is an access type, or a type with an
      --  Implicit_Dereference aspect, return the type of a dereference of
      --  an instance of this type.

   function ada_base_type_decl_p_is_tagged_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_tagged_type";
      --  Whether type is tagged or not

   function ada_base_type_decl_p_base_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_base_type";
      --  Return the base type entity for this derived type declaration

   function ada_base_type_decl_p_base_types
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_ada_node_array) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_base_types";
      --  Return the list of base types for Self.

   function ada_base_type_decl_p_find_all_derived_types
     (Node : ada_base_entity_Ptr;
Units :
ada_analysis_unit_array;
      Imprecise_Fallback :
ada_bool;
Value_P : access ada_ada_node_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_find_all_derived_types";
      --  Return the list of all types that inherit (directly or inderictly)
      --  from Self among the given units.

   function ada_base_type_decl_p_comp_type
     (Node : ada_base_entity_Ptr;
Is_Subscript :
ada_bool;
      Origin : access constant ada_base_entity;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_comp_type";
      --  Return the component type of `Self`, if applicable. The component
      --  type is the type you'll get if you call a value whose type is `Self`.
      --  So it can either be:
      --
      --  1. The component type for an array. 2. The return type for an access
      --  to function.

   function ada_base_type_decl_p_index_type
     (Node : ada_base_entity_Ptr;
Dim :
int;
      Origin : access constant ada_base_entity;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_index_type";
      --  Return the index type for dimension ``dim`` for this type, if
      --  applicable.

   function ada_base_type_decl_p_is_derived_type
     (Node   : ada_base_entity_Ptr;
Other_Type   : access constant ada_base_entity;
      Origin : access constant ada_base_entity;
Value_P      : access ada_bool)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_derived_type";
      --  Whether Self is derived from other_type.

   function ada_base_type_decl_p_is_interface_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_interface_type";
      --  Return True iff this type declaration is an interface definition.

   function ada_base_type_decl_p_matching_type
     (Node : ada_base_entity_Ptr;

      Expected_Type : access constant ada_base_entity;
      Origin        : access constant ada_base_entity;
Value_P             : access ada_bool)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_matching_type";
      --  Return whether ``self`` matches ``expected_type``.

   function ada_base_type_decl_p_canonical_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_canonical_type";
      --  Return the canonical type declaration for this type declaration. For
      --  subtypes, it will return the base type declaration.

   function ada_base_type_decl_p_previous_part
     (Node : ada_base_entity_Ptr;
Go_To_Incomplete :
ada_bool;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_previous_part";
      --  Returns the previous part for this type decl.

   function ada_base_type_decl_p_next_part
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_next_part";
      --  Returns the next part for this type decl.

   function ada_base_type_decl_p_full_view
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_full_view";
      --  Return the full completion of this type.

   function ada_base_type_decl_p_is_definite_subtype
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_definite_subtype";
      --  Returns whether this is a definite subtype.
      --
      --  For convenience, this will return ``False`` for incomplete types,
      --  even though the correct answer is more akin to "non applicable".

   function ada_base_type_decl_p_is_private
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_private";
      --  Whether node is a private view of corresponding type.

   function ada_base_type_decl_p_root_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_root_type";
      --  Return the type that is at the root of the derivation hierarchy
      --  (ignoring secondary interfaces derivations for tagged types)

   function ada_subtype_decl_f_subtype
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_subtype_decl_f_subtype";

   function ada_incomplete_type_decl_f_discriminants
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_incomplete_type_decl_f_discriminants";

   function ada_incomplete_tagged_type_decl_f_has_abstract
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_incomplete_tagged_type_decl_f_has_abstract";

   function ada_protected_type_decl_f_discriminants
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_protected_type_decl_f_discriminants";

   function ada_protected_type_decl_f_interfaces
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_protected_type_decl_f_interfaces";
      --  This field contains a list that itself contains one of the following
      --  nodes:
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Identifier
      --
      --  * String_Literal

   function ada_protected_type_decl_f_definition
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_protected_type_decl_f_definition";

   function ada_task_type_decl_f_discriminants
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_task_type_decl_f_discriminants";

   function ada_task_type_decl_f_definition
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_task_type_decl_f_definition";

   function ada_type_decl_f_discriminants
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_type_decl_f_discriminants";

   function ada_type_decl_f_type_def
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_type_decl_f_type_def";

   function ada_type_decl_p_get_primitives
     (Node : ada_base_entity_Ptr;
Only_Inherited :
ada_bool;

      Value_P : access ada_ada_node_array) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_type_decl_p_get_primitives";
      --  Return the list of all primitive operations that are available on
      --  this type. If `only_inherited` is True, it will only return the
      --  primitives that are implicitly inherited by this type, discarding
      --  those explicitly defined on this type.

   function ada_basic_subp_decl_p_subp_decl_spec
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_subp_decl_p_subp_decl_spec";
      --  Return the specification for this subprogram

   function ada_basic_subp_decl_p_body_part
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_subp_decl_p_body_part";
      --  Return the BaseSubpBody corresponding to this node.

   function ada_classic_subp_decl_f_overriding
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_classic_subp_decl_f_overriding";

   function ada_classic_subp_decl_f_subp_spec
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_classic_subp_decl_f_subp_spec";

   function ada_formal_subp_decl_f_default_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_formal_subp_decl_f_default_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Attribute_Ref
      --
      --  * Box_Expr
      --
      --  * Call_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * Null_Literal
      --
      --  * Qual_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
